# yaku

./: .clang-format  compile  grub.cfg  limine.cfg  make_iso.sh  make_limine.sh  meson.build  readme.md  sources.md
kernel/: boot.asm  kernel.c  link.ld  main.c  main64.asm  meson.build  multiboot.h  terminal.c  terminal.h
kernel/boot/: boot32.asm  boot64.asm  multiboot.asm
kernel/drivers/: fb.c  fb.h  fpu.c  fpu.h  pit.c  pit.h  rtc.c  rtc.h  serial.c  serial.h  sse.asm  timer.c  timer.h  vga_text.c  vga_text.h
kernel/drivers/input/: input_device.c  input_device.h  ps2.c  ps2.h
kernel/drivers/lba/: lba copy.asm  lba.asm  lba.c  lba.h
kernel/drivers/syscall_handlers/: meson.build  syscall.c  syscall.h  syscall_close.c  syscall_create_task.c  syscall_create_virtual_file.c  syscall_getdents.c  syscall_lseek.c  syscall_mkdir.c  syscall_mknod.c  syscall_open.c  syscall_read.c  syscall_remove_virtual_file.c  syscall_rmdir.c  syscall_unlink.c  syscall_write.c
kernel/echfs/: echfs-fuse-daf.c  echfs-fuse.bck.c  echfs-fuse.c  echfs-fuse.h  echfs-fuse2.c  echfs-fuse3.c  echfs-utils.c  echfs-utils.h  mkfs.echfs.c  mkfs.echfs.h  part.c  part.h
kernel/interrupts/: idt.asm  idt.c  idt.h  isr.asm  isr.c  isr.h  pic.c  pic.h
kernel/lib/: atoi.c  atoi.h  datetime copy.c  datetime copy.h  datetime.c  datetime.h  file.c  file.h  fuse.c  fuse.h  getopt.c  getopt.h  origin.h  stat.h  stdio.c  stdio.h  string.c  string.h  time.c  time.h  uuid.c  uuid.h  virtual_file.c  virtual_file.h  write_to_drive.c  write_to_drive.h
kernel/lib/input/: input_event.c  input_event.h  input_to_text.c  input_to_text.h  keyboard_handler.c  keyboard_handler.h  mouse_handler.c  mouse_handler.h  read_input.c  read_input.h
kernel/lib/syscall_wrapper/: clone.c  clone.h  close.h  create_virtual_file.h  get_open_pointer.h  getdents.h  lseek.h  mkdir.h  mknod.h  open.h  read.h  remove_virtual_file.h  rmdir.h  syscall.asm  syscall_wrappers.h  syscalls.h  unlink.h  write.h
kernel/memory/: init.c  pmm.c  pmm.h
kernel/misc/: io.h  multiboot.h  stivale2.h  types.h
kernel/multitasking/: context_switch.asm  schedule.c  schedule.h  scheduler.c  scheduler.h  task.c  task.h
kernel/resources/: cursor.c  cursor.h  font8x8.c  font8x8.h  keyboard_enum.h  keyboard_keycode.h  keyboard_keymap.c  keyboard_keymap.h  keyboard_stringmap.c  keyboard_stringmap.h  tbz_logo.c  tbz_logo.h  yaku_logo.h
kernel/runtime/: drawutils.c  drawutils.h  runtime.c  runtime.h  windowmanager.c  windowmanager.h
kernel/runtime/programs/: cube.c  cube.h  editor.c  editor.h  gradient.c  gradient.h  tbz.c  tbz.h  tictactoe.c  tictactoe.h
kernel/virtual_fs/: FILE.h  virtual_fs.c  virtual_fs.h
