kernel_syscall_handlers_c_srcs = [
    'syscall.c',
    'syscall_create_task.c',
    'syscall_create_virtual_file.c',
    'syscall_remove_virtual_file.c',
    'syscall_open.c',
    'syscall_read.c',
    'syscall_write.c',
    'syscall_close.c',
    'syscall_getdents.c',
    'syscall_lseek.c',
    'syscall_mknod.c',
    'syscall_mkdir.c',
    'syscall_rmdir.c',
    'syscall_unlink.c',
    ]
